maint: fixed margin/layout issue for end-date for calendar inputs in filters

--- a/css/calendar.css
+++ b/css/calendar.css
@@ -4,10 +4,6 @@
   position: relative;
   height: 3.6rem; 
   width: 15rem; 
-  margin-right: 1rem; 
- /* border: 1px solid #c4c4c4;
-  color: var(--white-0);
-  background-color: var(--grey-4);*/
   box-shadow: inset 0 3px 6px rgba(0, 0, 0, 0.1);
   cursor: pointer;
   background-image: url('../icons/calendar_x16.svg') !important; 
